# Agent-HunterDefender-Agno

./: .env.example  .gitignore  README.md  compose.sidecar.yaml  pyproject.toml
scripts/: provision-entra.ps1
src/hunter_defender_agent/: __init__.py  cli.py  config.py  ollama.py  runtime.py
src/hunter_defender_agent/agents/: __init__.py  identity.py
src/hunter_defender_agent/auth/: __init__.py  sidecar.py  user_session.py
src/hunter_defender_agent/domain/: __init__.py  reports.py  risk.py
src/hunter_defender_agent/mcp/: __init__.py  defender.py
src/hunter_defender_agent/models/: __init__.py  providers.py
tests/: test_agent_factory.py  test_config.py  test_defender_mcp.py  test_mcp_contract.py  test_ollama.py  test_risk.py  test_runtime.py  test_sidecar.py  test_user_session.py
tests/manual/: test_ollama.sh
