[project]
name = "hunter-defender-agent"
version = "0.1.0"
description = "Interactive identity security analysis agent for Hunter Defender MCP"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agno>=2.8,<2.9",
    "httpx>=0.28,<0.29",
    "keyring>=25.6,<26",
    "mcp>=1.10,<2",
    "msal>=1.33,<2",
    "ollama>=0.6,<1",
    # Agno 2.8 imports OllamaResponses through its package initializer, which requires openai.
    "openai>=2,<3",
    "pydantic-settings>=2.10,<3",
    "rich>=14,<15",
    "typer>=0.16,<1",
]

[project.scripts]
hunter-defender = "hunter_defender_agent.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.17,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hunter_defender_agent"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
extend-exclude = [".agents"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["msal", "msal.*"]
ignore_missing_imports = true
